--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ const App = () => {
   const [activeAccordion, setActiveAccordion] = useState(null);
   const [heroImageIndex, setHeroImageIndex] = useState(0);
 
-  // Hero Background Images
+  // Hero Background Images (Unsplash for demo)
   const heroImages = [
     "https://images.unsplash.com/photo-1514320291840-2e0a9bf2a9ae?q=80&w=2070&auto=format&fit=crop", // Stunt
     "https://images.unsplash.com/photo-1536769947700-c97559c5d18d?q=80&w=1978&auto=format&fit=crop", // Camera
@@ -383,6 +383,7 @@ const App = () => {
                       className="absolute inset-0 w-full h-full object-cover filter grayscale contrast-125 group-hover:grayscale-0 group-hover:scale-110 transition-all duration-700" 
                       onError={(e) => {
                         e.target.onerror = null;
+                        // ダミー画像へのフォールバック（バックアップ）
                         e.target.src = "https://images.unsplash.com/photo-1542596768-5d1d21f1cf72?q=80&w=1500&auto=format&fit=crop";
                       }}
                     />
