--- a/index.html
+++ b/index.html
@@ -337,42 +337,42 @@ const App = () => {
                  {
                    name_jp: "谷垣 健治",
                    name_en: "KENJI TANIGAKI",
-                   img: "face-tanigaki.jpg"
+                   img: "./face-tanigaki.jpg"
                  },
                  {
                    name_jp: "下村 勇二",
                    name_en: "YUJI SHIMOMURA",
-                   img: "face-shimomura.jpg"
+                   img: "./face-shimomura.jpg"
                  },
                  {
                    name_jp: "横山 誠",
                    name_en: "MAKOTO YOKOYAMA",
-                   img: "face-yokoyama.jpg"
+                   img: "./face-yokoyama.jpg"
                  },
                  {
                    name_jp: "辻井 啓伺",
                    name_en: "KEIJI TSUJII",
-                   img: "face-tuji.jpg"
+                   img: "./face-tuji.jpg"
                  },
                  {
                    name_jp: "玉井 雅利",
                    name_en: "MASATOSHI TAMAI",
-                   img: "face.tamai.png"
+                   img: "./face.tamai.png"
                  },
                  {
                    name_jp: "多加野 詩子",
                    name_en: "UTAKO TAKANO",
-                   img: "face-takano.jpg"
+                   img: "./face-takano.jpg"
                  },
                  {
                    name_jp: "渡辺 竜平",
                    name_en: "RYUHEI WATANABE",
-                   img: "fae.Ryoheiv2.jpg"
+                   img: "./fae.Ryoheiv2.jpg"
                  },
                  {
                    name_jp: "矢部 大",
                    name_en: "DAI YABE",
-                   img: "face-yabe.jpg"
+                   img: "./face-yabe.jpg"
                  }
                ].map((mentor, i) => (
                  <div key={i} className="group relative h-[400px] overflow-hidden border border-zinc-800 hover:border-red-600 transition-colors duration-500 animate-on-scroll" style={{transitionDelay: `${i*100}ms`}}>
