--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
                                 <div className="absolute inset-0 bg-red-600 transform translate-x-4 translate-y-4"></div>
                                 {/* 代表の写真も face-yabe.jpg に変更 */}
                                 <img 
-                                    src="./face-yabe.jpg" 
+                                    src="./about-image2.png 
                                     alt="Founder" 
                                     className="relative w-full grayscale contrast-125 border-4 border-black z-10"
                                 />
@@ -581,3 +581,4 @@
     </script>
 </body>
 </html>
+
