Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
             // ★設定★
             const heroVideoFile = "./top_movie.mp4"; 
-            const promotionVideoId = "wVteq0dMuzI"; // 新しい動画ID
+            const promotionVideoId = "vH4UQHAeCgI"; 
             
             // ギャラリー画像リスト
             const galleryImages = [
@@ -135,7 +135,7 @@
                 "./gazousozai009.jpg"
             ];
 
-            // 講師リスト (矢部大様へ修正)
+            // 講師リスト (MASARU YABEへ修正)
             const mentors = [
                 { name_jp: "谷垣 健治", name_en: "KENJI TANIGAKI", img: "./face-tanigaki.jpg" },
                 { name_jp: "下村 勇二", name_en: "YUJI SHIMOMURA", img: "./face-shimomura.jpg" },
@@ -144,7 +144,7 @@
                 { name_jp: "玉井 雅利", name_en: "MASATOSHI TAMAI", img: "./face.tamai.png" },
                 { name_jp: "多加野 詩子", name_en: "UTAKO TAKANO", img: "./face-takano.jpg" },
                 { name_jp: "渡辺 竜平", name_en: "RYUHEI WATANABE", img: "./fae.Ryoheiv2.jpg" },
-                { name_jp: "矢部 大", name_en: "DAI YABE", img: "./face-yabe.jpg" } // 修正: DAI YABE & face-yabe.jpg
+                { name_jp: "矢部 大", name_en: "MASARU YABE", img: "./face-yabe.jpg" } // 修正: MASARU YABE
             ];
 
             useEffect(() => {
@@ -356,7 +356,7 @@
                         </div>
                     </section>
 
-                    {/* Mentors (Updated Names and Images) */}
+                    {/* Mentors */}
                     <section id="mentors" className="py-32 bg-zinc-950 text-white relative">
                         <div className="max-w-7xl mx-auto px-4 relative z-10">
                             <div className="text-center mb-24 animate-on-scroll">
@@ -522,7 +522,7 @@
                         </div>
                     </section>
 
-                    {/* Passion Section (Fixing broken link) */}
+                    {/* Passion Section (Updated Image) */}
                     <section id="passion" className="py-32 bg-white relative">
                         <div className="max-w-6xl mx-auto px-4 flex flex-col md:flex-row gap-16 items-center">
                             <div className="md:w-1/2 animate-on-scroll relative">
