--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
             // ★設定★
             const heroVideoFile = "./top_movie.mp4"; 
-            const promotionVideoId = "vH4UQHAeCgI"; 
+            const promotionVideoId = "wVteq0dMuzI"; // ★ここに新しい動画IDを設定しました★
             
             // ギャラリー画像リスト
             const galleryImages = [
@@ -135,7 +135,7 @@
                 "./gazousozai009.jpg"
             ];
 
-            // 講師リスト (MASARU YABEへ修正)
+            // 講師リスト
             const mentors = [
                 { name_jp: "谷垣 健治", name_en: "KENJI TANIGAKI", img: "./face-tanigaki.jpg" },
                 { name_jp: "下村 勇二", name_en: "YUJI SHIMOMURA", img: "./face-shimomura.jpg" },
@@ -144,7 +144,7 @@
                 { name_jp: "玉井 雅利", name_en: "MASATOSHI TAMAI", img: "./face.tamai.png" },
                 { name_jp: "多加野 詩子", name_en: "UTAKO TAKANO", img: "./face-takano.jpg" },
                 { name_jp: "渡辺 竜平", name_en: "RYUHEI WATANABE", img: "./fae.Ryoheiv2.jpg" },
-                { name_jp: "矢部 大", name_en: "MASARU YABE", img: "./face-yabe.jpg" } // 修正: MASARU YABE
+                { name_jp: "矢部 大", name_en: "MASARU YABE", img: "./face-yabe.jpg" } // 矢部大 / MASARU YABE
             ];
 
             useEffect(() => {
